--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -18,7 +18,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.4",
-    "twilio": "^5.3.2"
-  }
+    "nodemon": "^3.1.7",
+    "twilio": "^5.3.3"
+  },
+  "keywords": [],
+  "description": ""
 }
