--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,11 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/$1"
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
+
+  
   
